<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>pmd-doc</artifactId>
    <name>PMD Documentation Generator (internal)</name>
    <packaging>jar</packaging>

    <parent>
        <groupId>net.sourceforge.pmd</groupId>
        <artifactId>pmd</artifactId>
        <version>7.14.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <java.version>21</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.github.siom79.japicmp</groupId>
                <artifactId>japicmp-maven-plugin</artifactId>
                <configuration>
                    <parameter>
                        <excludes combine.children="append">
                            <exclude>net.sourceforge.pmd.doc.internal</exclude>
                        </excludes>
                    </parameter>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>generate-rule-docs</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <classpathScope>test</classpathScope>
                        </configuration>
                        <executions>
                            <execution>
                                <id>generate-rule-docs</id>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <mainClass>net.sourceforge.pmd.doc.internal.GenerateRuleDocsCmd</mainClass>
                                    <arguments>
                                        <argument>${project.basedir}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>check-dead-links</id>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <phase>verify</phase>
                                <configuration>
                                    <mainClass>net.sourceforge.pmd.doc.internal.DeadLinksChecker</mainClass>
                                    <arguments>
                                        <argument>${project.basedir}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>check-rule-tags</id>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <phase>verify</phase>
                                <configuration>
                                    <mainClass>net.sourceforge.pmd.doc.internal.RuleTagChecker</mainClass>
                                    <arguments>
                                        <argument>${project.basedir}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>net.sourceforge.pmd</groupId>
            <artifactId>pmd-languages-deps</artifactId>
            <version>${project.version}</version>
            <type>pom</type>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.pmd</groupId>
            <artifactId>pmd-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
